style.css
:root {
    --primary-color: #845EC2;
    --secondary-color: #524788;
    --tertiary-color: #955EC2;
    --quaternary-color: #5E85C2;
    --quinary-color: #425D88;
}

/* Reset default list styling */
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

/* Disable pointer events on disabled elements */
.disabled {
    pointer-events: none;
  }

/* Set basic element styling */
body {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    color: #333;
    line-height: 1.5;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background: linear-gradient(135deg, #845EC2, #524788, #955ec2, #5e85c2, #425d88);
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0;
}

/* Reset default h1 styling */
h1 {
    font-size: 3rem;
    color: var(--primary-color);
}

/* Centralized box styling */
.centralized-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-width: 600px;
    margin: 1rem;
    padding: 1.5rem;
    box-sizing: border-box;
    border: 1px solid #a0a0a0; /* Optional: Add a border for visual separation */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.555); /* Optional: Add a shadow for better visibility */
    backdrop-filter: blur(5px);
    border-radius: 10px;
    background-color: #fafafbb6;
}

/* Header styling */
header {
    margin-bottom: 1.5rem;
}

header * {
    margin: 0;
}

/* Grid layout for the entire game section */
.game-section {
    display: grid;
    grid-template-columns: auto auto auto;
    grid-template-rows: auto auto auto;
    grid-template-areas: 
        "game-title game-title game-title"
        "counter1 gameboard counter2"
        "buttons buttons buttons";
    align-items: center;
    justify-items: center;
    gap: 10px;
    column-gap: 2rem;
}

/* Game section elements styling */
.game-section .X, .game-section .O {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 80px;
}

.X {
    color: var(--primary-color);
    filter: drop-shadow(0 0 2px var(--primary-color));
}

.O {
    color: var(--quaternary-color);
    filter: drop-shadow(0 0 2px var(--quaternary-color));
}

.game-section .game-title {
    grid-area: game-title;
    text-align: center;
    font-size: 36px;
    margin-bottom: 1.5rem;
    color: var(--primary-color);
    display: flex;
    gap: 1.5rem;
    font-weight: bold;
}

.game-section .gameboard {
    grid-area: gameboard;
}

.game-section .buttons {
    grid-area: buttons;
    display: flex;
    justify-content: space-around;
    width: 100%;
    gap: 2rem;
}

/* Button styling */
.buttons button, .dialog-container .form-buttons button {
    padding: 0.5rem 1rem;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 200px;
    max-width: 200px;
    min-width: 100px;
    font-size: 1.2rem;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    background-color: var(--primary-color);
    color: white;
    box-shadow: 0 0 6px rgba(0, 0, 0, 0.555);
}

.buttons button:hover, .dialog-container .form-buttons button:hover {
    background-color: #978d9559;
    color: var(--primary-color);
}

/* Gameboard styling */
.gameboard {
    position: relative;
    display: grid;
    grid-template-columns: repeat(3, 100px);
    border: 1px solid #333;
    grid-row: 3;
    margin-bottom: 2rem;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.555);
}

.cell {
    width: 100px;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 24px;
    border: 1px solid #333;
    cursor: pointer;
    background-color: #7c7c7446;
}

.cell:hover {
    background-color: #955ec242;
}

/* Player styles */
.player-x {
    color: var(--primary-color);
    font-weight: bold;
    font-size: 80px;
}

.player-o {
    color: var(--quaternary-color);
    font-weight: bold;
    font-size: 80px;
}

/* Footer styling */
footer img {
    height: 35px;
    /*filter:drop-shadow(0 0 10px var(--primary-color));*/
}

footer p {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 10vh;
    gap: 0.5rem;
    color: #333;
    font-weight: bold;
}

/* Dialog container styling */
#start-dialog{
    background-color: rgba(255, 255, 255, 0.0);
    border: none;
}
#start-dialog::backdrop{
    backdrop-filter: blur(4px);
}
.dialog-container {
    display: grid;
    grid-template-columns: repeat(2, minmax(200px, 250px));
    grid-template-rows: auto auto auto auto;
    column-gap: 10px;
    row-gap: 10px;
    padding: 1.5rem;
    border-radius: 15px;
    background-color: rgba(255, 255, 255, 0.9);
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
    border: 1px solid rgba(132, 94, 194, 0.3);
    backdrop-filter: blur(10px);
}

.dialog-container h1 {
    grid-column: 1 / 3;
    text-align: center;
    color: var(--primary-color);
    font-size: 2rem;
    margin-bottom: 1rem;
}

.dialog-container .X, .dialog-container .O {
    text-align: center;
    font-size: 80px;
    font-weight: bold;
}

.dialog-container .X {
    color: var(--primary-color);
}

.dialog-container .O {
    color: var(--quaternary-color);
}

.dialog-container p:nth-of-type(1) {
    grid-column: 1;
    grid-row: 2;
}

.dialog-container p:nth-of-type(2) {
    grid-column: 2;
    grid-row: 2;
}

.dialog-container .reminder {
    grid-column: 1;
    grid-row: 3;
    text-align: left;
    color: #333;
    font-size: 1rem;
}

.dialog-container .form-buttons {
    grid-column: 1 / 3;
    display: flex;
    justify-content: space-between;
    margin-top: 1rem;
}

#form-names {
    display: grid;
    grid-column: 1 / 3;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
}

#form-names .player-input {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#form-names .player-input label {
    font-size: 1rem;
    color: var(--secondary-color);
    margin-bottom: 0.5rem;
}
#player1{
    color: var(--primary-color);
}
#player2{
    color: var(--quaternary-color);
}

#form-names .player-input input {
    width: 100%;
    padding: 0.5rem;
    border: 1px solid var(--secondary-color);
    border-radius: 5px;
    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
    transition: border-color 0.3s, box-shadow 0.3s;
}
#form-names .player-input input:focus {
    border-color: var(--primary-color);
    box-shadow: 0 0 5px rgba(132, 94, 194, 0.5);
}
#form-names .player-input input::placeholder {
    color: var(--quinary-color);
    opacity: 0.7;
}

/* General link styles */
a {
    color: var(--primary-color);
    text-decoration: none;
}

/* Win counter container */
.win-counter {
    display: flex;
    justify-content: center;
    width: 100%;
    gap: 1rem;
    font-size: 24px;
}

/* Player 1 specific styles */
.player1 {
    color: var(--primary-color);
}

/* Player 2 specific styles */
.player2 {
    color: var(--quaternary-color);
}

/* Versus text styles */
.vs {
    color: #333;
}

.gameboard.blurred {
    filter: blur(5px);
}

#winner-display {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 2em;
    background-color: rgba(255, 255, 255, 0.8); /* Optional: Add a background color */
    padding: 10px;
    border-radius: 5px;
    text-align: center;
    z-index: 10; /* Ensure it sits on top of other elements */
}
  
#next-round-button {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 2em;
    border: none;
    background: none;
    cursor: pointer;
    z-index: 10; /* Ensure it sits on top of other elements */
}
  
.hidden {
    display: none;
}

